fix(KUI-1462): preserve line breaks in cell content (#315)

--- a/public/css/kursutveckling-web.scss
+++ b/public/css/kursutveckling-web.scss
@@ -72,6 +72,10 @@ span {
     margin-left: 0 !important;
   }
 
+  .cell-content {
+    white-space: pre-wrap;
+  }
+
   .link {
     display: block;
   }
